kubeflow/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
spec:
  # tls:
  #   - hosts:
  #       - kf.istio.gateway
  #     secretName: ingress-cert
  ingressClassName: nginx-ingress
  rules:
    - host: kf.istio.gateway
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
